Fixing TodoSearch focus on Safari browser

--- a/src/TodoItem/TodoItem.css
+++ b/src/TodoItem/TodoItem.css
@@ -23,7 +23,7 @@
   padding-top: 0.5em;
   padding-bottom: 0.5em;
   box-shadow: 1px 1px 6px #cccbcb;
-  transition: 1s;
+  transition: 0.5s;
 }
 
 .TodoItemDarkMode {
