--- a/src/TodoSearch/TodoSearch.css
+++ b/src/TodoSearch/TodoSearch.css
@@ -27,7 +27,7 @@
   padding-left: 0.5em;
   border: 1px solid gray;
   border-radius: 5px;
-  transition: 1s;
+  transition: opacity 1s, background-color 0.5s;
 }
 
 .TodoSearch:disabled {
@@ -39,7 +39,8 @@
 }
 
 .TodoSearch:focus {
-  outline: #4286f4 solid 1px;
+  box-shadow: 0 0 2px 0 #4286f4;
+  border: 1px solid #4286f4;
 }
 
 .iconSearchDarkMode {
